# As-Sunnah-Foundation-AI-Assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  KNOWLEDGE.md  NAVIGATION.md  README.md  docker-compose.https.yml  docker-compose.yml  start.sh
ai-gateway/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
ai-gateway/knowledge/: build.ts  curated.json  endpoints.mjs  eval.ts  query.ts
ai-gateway/scripts/: smoke.ts  tts-sample.ts
ai-gateway/src/: contracts.ts  models.ts  prompts.ts  ratelimit.ts  server.ts  timeout.ts
ai-gateway/src/adapters/: composed-understanding.ts  edge.ts  failover.ts  hf-understanding.ts  llm.ts  local.ts  openai-compat-llm.ts  stt.ts  tts.ts  understanding.ts
ai-gateway/src/rag/: embed.ts  retrieve.ts  store.ts
ai-gateway/test/: contracts.test.ts  store.test.ts  tts-fallback.test.ts
doc/Hugging_Face_Inference_endpoints/: DECISION.md  infromation.md
doc/Hugging_Face_Inference_endpoints/files/: .env.example  hf-understanding.ts  llm.ts  server.ts  stt.ts
doc/deployment/: PLAN.md
doc/feature_promotion/: donatePlane.json  skill-development-institute.json
doc/multi-model-failover/: PLAN.md
doc/ui_branding/: Figma_previews.md  branding.json  design_system.md  imageLink.md  init.json
scripts/: make-demo-zip.sh  refresh.sh
scripts/demo/: INSTRUCTIONS.txt  run.bat  run.sh  stop.sh
src/: Dockerfile  index.html  pyproject.toml  server.py
